# windows-DeviceProfileManager

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  DisplayAudioOrchestrator.ps1  DisplayAudioOrchestrator.sln  README.md  dev.bat  readme.ai.md
.github/workflows/: build.yml  ci.yml  release.yml
DisplayAudioOrchestrator/: DisplayAudioOrchestrator.csproj  OrchestratorCommandLineParser.cs  OrchestratorLogger.cs  OrchestratorProcessor.cs  Program.cs
DisplayAudioOrchestrator/Audio/: AudioManager.cs  AudioNative.cs
DisplayAudioOrchestrator/CCD/: DisplayConfigManager.cs  DisplayConfigNative.cs
DisplayAudioOrchestrator/GUI/: DeviceIdentificationForm.cs  MonitorOverlayForm.cs  ProfileEditorForm.cs  ProfileSwitcherForm.cs  ResolutionPickerForm.cs
DisplayAudioOrchestrator/Orchestrator/: NicknameRegistry.cs  OrchestratorState.cs  ProfileManager.cs  ProfileNotAppliedException.cs  StateStore.cs
SetResolutionAdapters/: DisplayManagerAdapter.cs  SetResolutionAdapters.csproj
SetResolutionReplacements/: Placeholder.cs  SetResolutionReplacements.csproj
kaiser-app/: etc.lnk  index.html  package-lock.json  package.json  vite.config.ts
kaiser-app/src/: App.tsx  api.ts  (+2 more)
kaiser-app/src-tauri/: Cargo.toml  tauri.conf.json
kaiser-app/src-tauri/capabilities/: default.json
kaiser-app/src-tauri/src/: cli.rs  commands.rs  lib.rs  main.rs  state.rs
kaiser-core/: Cargo.toml
kaiser-core/src/: audio.rs  lib.rs  profile.rs  resolution.rs
kaiser-core/src/audio/: win32.rs
kaiser-core/src/backend/: apply.rs  enumerate.rs  mod.rs  topology.rs  win32_types.rs
kaiser-core/src/resolution/: win32.rs
(+3 files in other folders)
