[package]
name = "kaiser-core"
version = "0.1.0"
edition = "2021"

[dependencies]
monarch = { path = "../Monarch" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Devices_Display",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_ColorSystem",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
] }
