[package]
name = "kaiser-app"
version = "1.2.1"
edition = "2024"

[lib]
name = "kaiser_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
kaiser-core = { path = "../../kaiser-core" }
monarch = { path = "../../Monarch" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
